minor backend changes